Reordered jsx elements depending upon device size using react-responsive.  Fixed spacing between elements.

--- a/styles/layout/_explore.scss
+++ b/styles/layout/_explore.scss
@@ -5,10 +5,12 @@
   flex-direction: row;
   align-items: center;
   .deimos-info-col {
+    margin-top: 250px;
     @media #{$md-and-smaller} {
       display: flex;
       flex-direction: column;
       align-items: center;
+      margin-top: 0px;
     }
   }
   .deimos-title {
@@ -74,6 +76,12 @@
   .phobos-moon-img {
     max-width: 60%;
   }
+  .phobos-moon-img,
+  .phobos-title {
+    @media #{$md-and-smaller} {
+      margin-top: 50px;
+    }
+  }
 }
 
 .deimos-image-col,
@@ -84,16 +92,19 @@
 }
 
 .explore-mars {
-  height: 700px;
-  width: 100%;
+  // width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   .mars-globe-container {
+    height: 700px;
     .mars-globe-img {
       margin-top: 100px;
-      max-width: 100vw;
-      height: 100%;
+      max-width: 50vw;
+      // height: 100%;
+      @media #{$sm-only} {
+        max-width: 80vh;
+      }
     }
   }
   .about-mars-left,
